<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Droid Desserts"
        android:textColor="@color/primaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChooseDessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:text="Choose Dessert"
        android:textColor="@color/colorAlt"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/product1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:onClick="itemClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseDessert"
        app:srcCompat="@drawable/donut"
        android:tag="Donut"/>

    <ImageView
        android:id="@+id/product2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_filling"
        android:scaleType="fitCenter"
        android:onClick="itemClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product1"
        app:srcCompat="@drawable/icecream"
        android:tag="Ice cream"/>

    <ImageView
        android:id="@+id/product3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/fro_yo_is_a_premium_self_service_frozen_yoghurt"
        android:scaleType="fitXY"
        android:onClick="itemClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product2"
        app:srcCompat="@drawable/froyo"
        android:tag="Frozen Yogurt"/>

    <TextView
        android:id="@+id/textViewDonuts"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/textColor"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/adamina"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/product1"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDessert" />

    <TextView
        android:id="@+id/textViewIceCream"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:autoSizeTextType="uniform"
        android:textColor="@color/textColor"
        android:fontFamily="@font/adamina"
        android:text="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_filling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/product2"
        app:layout_constraintTop_toBottomOf="@id/textViewDonuts" />

    <TextView
        android:id="@+id/textViewFroYo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:autoSizeTextType="uniform"
        android:textColor="@color/textColor"
        android:fontFamily="@font/adamina"
        android:text="@string/fro_yo_is_a_premium_self_service_frozen_yoghurt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product3"
        app:layout_constraintTop_toBottomOf="@id/textViewIceCream" />


</androidx.constraintlayout.widget.ConstraintLayout>
